--- a/index.html
+++ b/index.html
@@ -1,49 +1,87 @@
 <!DOCTYPE html>
-<html>
+<html lang="es">
 <head>
-    <title>Acceso Seguro</title>
-    <style>
-        #contenido {
-            display: none;
-            margin-top: 20px;
-            padding: 20px;
-            background: #f0f0f0;
-            border-radius: 10px;
-        }
-    </style>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Acceso Seguro</title>
+  <style>
+    body { font-family: system-ui, Arial, sans-serif; margin: 24px; }
+    .card { max-width: 860px; margin: 0 auto; }
+    form { display: flex; gap: 8px; }
+    input[type="password"] { flex: 1; padding: 10px; }
+    button { padding: 10px 16px; cursor: pointer; }
+    #contenido { display: none; margin-top: 24px; padding: 20px; background: #f5f5f7; border-radius: 12px; }
+    .grid { display: grid; grid-template-columns: 1fr; gap: 16px; }
+    @media (min-width: 700px) { .grid { grid-template-columns: 1fr 1fr; } }
+    .panel { background: white; border-radius: 12px; padding: 16px; box-shadow: 0 1px 4px rgba(0,0,0,.06); }
+    .btn { display:inline-block; padding:10px 14px; border-radius:10px; text-decoration:none; border:1px solid #ddd; }
+  </style>
 </head>
 <body>
-
+  <div class="card">
     <h1>Bienvenido</h1>
     <p>Introduce la contraseña para ver el contenido:</p>
 
-    <form onsubmit="return checkPassword()">
-        <label for="password">Contraseña:</label>
-        <input type="password" id="password" name="password">
-        <button type="submit">Entrar</button>
+    <form id="form" onsubmit="return checkPassword()">
+      <input type="password" id="password" name="password" placeholder="Contraseña">
+      <button type="submit">Entrar</button>
     </form>
 
     <div id="contenido">
-        <h2>Contenido Secreto</h2>
-        <p>Este es el contenido oculto que solo aparece cuando ingresas la contraseña correcta.</p>
-        <p>Puedes poner aquí texto, imágenes, videos o links.</p>
+      <h2>Panel privado</h2>
+      <p>Aquí va el contenido secreto. Puedes editar libremente esta sección.</p>
+
+      <div class="grid">
+        <div class="panel">
+          <h3>Texto y enlaces</h3>
+          <ul>
+            <li>Nota interna #1</li>
+            <li>Lista de tareas</li>
+            <li><a href="https://example.com" target="_blank" rel="noopener">Enlace externo</a></li>
+          </ul>
+        </div>
+
+        <div class="panel">
+          <h3>Imagen</h3>
+          <!-- sustituye "assets/imagen.jpg" por tu ruta real -->
+          <img src="assets/imagen.jpg" alt="Imagen privada" style="max-width:100%; border-radius:10px;">
+        </div>
+
+        <div class="panel">
+          <h3>Video (YouTube)</h3>
+          <div style="position:relative;padding-bottom:56.25%;height:0;overflow:hidden;border-radius:10px;">
+            <iframe
+              src="https://www.youtube.com/embed/dQw4w9WgXcQ"
+              title="Video"
+              style="position:absolute;top:0;left:0;width:100%;height:100%;border:0;"
+              allowfullscreen></iframe>
+          </div>
+        </div>
+
+        <div class="panel">
+          <h3>Descarga</h3>
+          <!-- sube docs/manual.pdf al repo y usa esta ruta -->
+          <a class="btn" href="docs/manual.pdf" download>Descargar manual (PDF)</a>
+        </div>
+      </div>
     </div>
+  </div>
 
-    <script>
-        function checkPassword() {
-            const password = document.getElementById("password").value;
-            const realPassword = "EQUIPOABmas"
+  <script>
+    function checkPassword() {
+      const pass = document.getElementById("password").value;
+      const real = "EQUIPOABmas"; // tu clave
 
-            if (password === realPassword) {
-                document.getElementById("contenido").style.display = "block";
-                alert("Acceso concedido");
-            } else {
-                alert("Contraseña incorrecta");
-            }
-
-            return false;
-        }
-    </script>
-
+      if (pass === real) {
+        document.getElementById("contenido").style.display = "block";
+        document.getElementById("form").style.display = "none";   // ocultar el formulario
+        // desplazar al contenido
+        setTimeout(() => document.getElementById("contenido").scrollIntoView({behavior:"smooth"}), 50);
+      } else {
+        alert("Contraseña incorrecta");
+      }
+      return false;
+    }
+  </script>
 </body>
 </html>
