--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         <div class="panel">
           <h3>Descarga</h3>
           <!-- sube docs/manual.pdf al repo y usa esta ruta -->
-          <a class="btn" href="docs/Abmas_documento_ES.pdf" download>Descargar manual (PDF)</a>
+          <a class="btn" href="docs/ABmas_documento_ES.pdf" download>Descargar manual (PDF)</a>
         </div>
       </div>
     </div>
@@ -85,4 +85,5 @@
   </script>
 </body>
 </html>
+
 
