--- a/index.html
+++ b/index.html
@@ -35,7 +35,39 @@
         <div class="panel">
           <h3>Texto y enlaces</h3>
           <ul>
-            <li>Nota interna #1</li>
+            <li>PASOS PARA CREAR UNA APP
+1. Definir funcionalidades básicas.
+2. Elegir herramientas y lenguajes de programación.
+3. Diseñar la interfaz de usuario.
+4. Desarrollar el backend con Django.
+5. Desarrollar el frontend con React Native.
+6. Integrar pagos con PayPal.
+7. Realizar pruebas y debugging.
+8. Publicar y mantener la app.
+
+PROGRAMAS PARA LA CREACIÓN
+- React Native (móvil)
+- Python + Django (backend)
+- PayPal (pagos)
+
+LENGUAJES DE PROGRAMACIÓN
+- JavaScript (React Native)
+- Python (backend con Django)
+
+IDENTIDAD DE DESARROLLO
+La app puede desarrollarse y publicarse a nombre de un individuo o de una empresa.
+
+MANTENIMIENTO
+- Actualizaciones
+- Corrección de errores
+- Soporte al usuario
+- Verificación de compatibilidad y seguridad
+
+SOPORTE
+Incluye FAQ y guía básica para usuarios nuevos.
+
+IDENTIDAD DE DESARROLLADOR
+El desarrollador puede iniciar como individuo y más adelante registrar una empresa si lo desea.</li>
             <li>Lista de tareas</li>
             <li><a href="https://example.com" target="_blank" rel="noopener">Enlace externo</a></li>
           </ul>
@@ -85,5 +117,6 @@
   </script>
 </body>
 </html>
+
 
 
