--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@ SOPORTE
 Incluye FAQ y guía básica para usuarios nuevos.
 
 IDENTIDAD DE DESARROLLADOR
-El desarrollador puede iniciar como individuo y más adelante registrar una empresa si lo desea.</li>
+El desarrollador puede iniciar como individuo y más adelante registrar una empresa si lo desea</li>
             <li>Lista de tareas</li>
             <li><a href="https://example.com" target="_blank" rel="noopener">Enlace externo</a></li>
           </ul>
@@ -117,6 +117,7 @@ El desarrollador puede iniciar como individuo y más adelante registrar una empr
   </script>
 </body>
 </html>
+
 
 
 
