--- a/index.html
+++ b/index.html
@@ -1,107 +1,216 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Acceso Seguro</title>
+  <title>ABmas App Panel</title>
+
   <style>
-    :root { --bg:#0f172a; --card:#111827; --muted:#94a3b8; --text:#e5e7eb; --accent:#22d3ee; }
-    * { box-sizing: border-box; }
-    body { margin:0; font-family: system-ui, Arial, sans-serif; background: var(--bg); color: var(--text); }
-    .wrap { max-width: 900px; margin: 40px auto; padding: 24px; }
-    .card { background: var(--card); border-radius: 14px; padding: 24px; box-shadow: 0 10px 30px rgba(0,0,0,.25); }
-    h1,h2 { margin: 0 0 12px 0; }
-    p { color: var(--muted); }
-    form { display:flex; gap:10px; margin-top: 10px; }
-    input[type="password"] { flex:1; padding:12px 14px; border-radius:10px; border:1px solid #334155; background:#0b1220; color:var(--text); }
-    button { padding:12px 16px; border-radius:10px; border:1px solid #334155; background:#0b1220; color:var(--text); cursor:pointer; }
-    button:hover { border-color: var(--accent); }
-    #contenido { display:none; }
-    .section { margin-top: 20px; padding-top: 12px; border-top: 1px dashed #334155; }
-    ul, ol { margin: 8px 0 0 20px; }
-    code.badge { background:#0b1220; border:1px solid #334155; padding:2px 8px; border-radius:999px; color:var(--accent); font-weight:600; }
-    a.link { color:#22d3ee; font-weight:bold; word-break:break-all; }
+    :root {
+      --bg: #0d1117;
+      --card: #161b22;
+      --text: #e6edf3;
+      --muted: #8b949e;
+      --accent: #2dd4bf;
+      --border: #30363d;
+    }
+
+    * {
+      box-sizing: border-box;
+    }
+
+    body {
+      margin: 0;
+      font-family: system-ui, Arial, sans-serif;
+      background: var(--bg);
+      color: var(--text);
+    }
+
+    /* HEADER ESTILO APP */
+    .header {
+      position: sticky;
+      top: 0;
+      background: var(--card);
+      padding: 18px;
+      font-size: 20px;
+      font-weight: bold;
+      border-bottom: 1px solid var(--border);
+      text-align: center;
+      letter-spacing: 1px;
+    }
+
+    .wrap {
+      max-width: 900px;
+      margin: 0 auto;
+      padding: 20px;
+    }
+
+    /* FORM LOGIN */
+    form {
+      display: flex;
+      gap: 10px;
+      margin-top: 20px;
+    }
+
+    input[type="password"] {
+      flex: 1;
+      padding: 12px;
+      border-radius: 10px;
+      border: 1px solid var(--border);
+      background: #0b0f14;
+      color: var(--text);
+    }
+
+    button {
+      padding: 12px 16px;
+      border-radius: 10px;
+      border: 1px solid var(--accent);
+      background: var(--accent);
+      color: #000;
+      font-weight: bold;
+      cursor: pointer;
+    }
+
+    /* DASHBOARD / CARDS */
+    #contenido {
+      display: none;
+      margin-top: 20px;
+    }
+
+    .grid {
+      display: grid;
+      gap: 16px;
+      grid-template-columns: repeat(auto-fit, minmax(260px, 1fr));
+    }
+
+    .card {
+      background: var(--card);
+      padding: 20px;
+      border-radius: 14px;
+      border: 1px solid var(--border);
+      transition: transform .15s ease, background .15s ease;
+    }
+
+    .card:hover {
+      transform: translateY(-4px);
+      background: #1e242d;
+    }
+
+    .card h3 {
+      margin-top: 0;
+      color: var(--accent);
+    }
+
+    a.link {
+      color: var(--accent);
+      word-break: break-all;
+      text-decoration: none;
+      font-weight: bold;
+    }
+
+    .section-title {
+      font-size: 22px;
+      font-weight: bold;
+      margin: 20px 0 10px;
+      color: var(--accent);
+    }
   </style>
 </head>
+
 <body>
+
+  <div class="header">ABmas • Panel Privado</div>
+
   <div class="wrap">
-    <div class="card">
-      <h1>Acceso protegido</h1>
-      <p>Introduce la contraseña para ver el contenido.</p>
 
-      <form id="form" onsubmit="return checkPassword()">
-        <input id="password" name="password" type="password" placeholder="Contraseña" />
-        <button type="submit">Entrar</button>
-      </form>
+    <p>Introduce la contraseña para acceder:</p>
 
-      <div id="contenido" class="section">
-        <h2>PASOS PARA CREAR UNA APP</h2>
-        <ol>
-          <li>Definir funcionalidades básicas.</li>
-          <li>Elegir herramientas y lenguajes de programación.</li>
-          <li>Diseñar la interfaz de usuario.</li>
-          <li>Desarrollar el backend con Django.</li>
-          <li>Desarrollar el frontend con React Native.</li>
-          <li>Integrar pagos con PayPal.</li>
-          <li>Realizar pruebas y debugging.</li>
-          <li>Publicar y mantener la app.</li>
-        </ol>
+    <form id="form" onsubmit="return checkPassword()">
+      <input id="password" type="password" placeholder="Contraseña" />
+      <button type="submit">Entrar</button>
+    </form>
 
-        <div class="section">
-          <h2>PROGRAMAS PARA LA CREACIÓN</h2>
+    <div id="contenido">
+
+      <div class="section-title">Panel de Contenido</div>
+
+      <div class="grid">
+
+        <!-- CARD 1 -->
+        <div class="card">
+          <h3>PASOS PARA CREAR UNA APP</h3>
+          <ol>
+            <li>Definir funcionalidades básicas.</li>
+            <li>Elegir herramientas y lenguajes.</li>
+            <li>Diseñar la interfaz.</li>
+            <li>Backend con Django.</li>
+            <li>Frontend con React Native.</li>
+            <li>Pagos con PayPal.</li>
+            <li>Pruebas y debugging.</li>
+            <li>Publicación y mantenimiento.</li>
+          </ol>
+        </div>
+
+        <!-- CARD 2 -->
+        <div class="card">
+          <h3>PROGRAMAS</h3>
           <ul>
             <li>React Native (móvil)</li>
-            <li>Python + Django (backend)</li>
+            <li>Django + Python (backend)</li>
             <li>PayPal (pagos)</li>
           </ul>
         </div>
 
-        <div class="section">
-          <h2>LENGUAJES DE PROGRAMACIÓN</h2>
+        <!-- CARD 3 -->
+        <div class="card">
+          <h3>LENGUAJES</h3>
           <ul>
             <li>JavaScript (React Native)</li>
-            <li>Python (backend con Django)</li>
+            <li>Python (Django)</li>
           </ul>
         </div>
 
-        <div class="section">
-          <h2>IDENTIDAD DE DESARROLLO</h2>
-          <p>La app puede desarrollarse y publicarse a nombre de un individuo o de una empresa.</p>
+        <!-- CARD 4 -->
+        <div class="card">
+          <h3>IDENTIDAD DE DESARROLLO</h3>
+          <p>La app puede publicarse como individuo o empresa.</p>
         </div>
 
-        <div class="section">
-          <h2>MANTENIMIENTO</h2>
+        <!-- CARD 5 -->
+        <div class="card">
+          <h3>MANTENIMIENTO</h3>
           <ul>
             <li>Actualizaciones</li>
-            <li>Corrección de errores</li>
-            <li>Soporte al usuario</li>
-            <li>Verificación de compatibilidad y seguridad</li>
+            <li>Correcciones</li>
+            <li>Soporte</li>
+            <li>Compatibilidad y seguridad</li>
           </ul>
         </div>
 
-        <div class="section">
-          <h2>SOPORTE</h2>
+        <!-- CARD 6 -->
+        <div class="card">
+          <h3>SOPORTE</h3>
           <p>Incluye FAQ y guía básica para usuarios nuevos.</p>
         </div>
 
-        <div class="section">
-          <h2>IDENTIDAD DE DESARROLLADOR</h2>
-          <p>El desarrollador puede iniciar como individuo y más adelante registrar una empresa si lo desea.</p>
+        <!-- CARD 7 -->
+        <div class="card">
+          <h3>IDENTIDAD DEL DESARROLLADOR</h3>
+          <p>Puede iniciar como individuo y registrar empresa después.</p>
         </div>
 
-        <div class="section">
-          <h2>ENLACE ADICIONAL</h2>
-          <p>Acceso directo al recurso:</p>
-          <p>
-            <a class="link" href="https://github.com/nathanlopez/Stitch/tree/master" 
-               target="_blank" rel="noopener">
-              https://github.com/nathanlopez/Stitch/tree/master
-            </a>
-          </p>
+        <!-- CARD 8 -->
+        <div class="card">
+          <h3>ENLACE ADICIONAL</h3>
+          <p>Repositorio Stitch:</p>
+          <a class="link" href="https://github.com/nathanlopez/Stitch/tree/master" target="_blank">
+            https://github.com/nathanlopez/Stitch/tree/master
+          </a>
         </div>
 
-        <p class="section"><code class="badge">Contenido desbloqueado</code></p>
       </div>
+
     </div>
   </div>
 
@@ -114,7 +223,7 @@
         document.getElementById("contenido").style.display = "block";
         document.getElementById("form").style.display = "none";
         setTimeout(() => {
-          document.getElementById("contenido").scrollIntoView({ behavior:"smooth" });
+          document.getElementById("contenido").scrollIntoView({ behavior: "smooth" });
         }, 50);
       } else {
         alert("Contraseña incorrecta");
@@ -122,9 +231,10 @@
       return false;
     }
   </script>
+
 </body>
 </html>
-</html>
+
 
 
 
