--- a/index.html
+++ b/index.html
@@ -206,6 +206,7 @@
           <p>Repositorio Stitch:</p>
           <a class="link" href="https://github.com/nathanlopez/Stitch/tree/master" target="_blank">
             https://github.com/nathanlopez/Stitch/tree/master
+           <a class="link" href="https://www.surveymonkey.com/r/ZJBXHTY" target="_blank">
             https://www.surveymonkey.com/r/ZJBXHTY
           </a>
         </div>
@@ -235,6 +236,7 @@
 
 </body>
 </html>
+
 
 
 
