--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
   </div>
 
   <script>
-    const REAL_PASSWORD = "EQUIPOABmas";
+    const REAL_PASSWORD = "EQUIPOCARLOS";
 
     function checkPassword() {
       const pass = document.getElementById("password").value.trim();
@@ -236,6 +236,7 @@
 
 </body>
 </html>
+
 
 
 
